// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ export-class.ts 1`] = `
Object {
  "nodes": Array [
    ClassParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": null,
      "id": "ExportClass",
      "implementedInterfaces": Array [],
      "methods": Array [],
      "properties": Array [],
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ export-default-class.ts 1`] = `
Object {
  "nodes": Array [
    ClassParseResult {
      "constructors": Array [],
      "defaultExported": true,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedClass": null,
      "id": "ExportDefaultClass",
      "implementedInterfaces": Array [],
      "methods": Array [],
      "properties": Array [],
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ export-default-function.ts 1`] = `
Object {
  "nodes": Array [
    FunctionParseResult {
      "defaultExported": true,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "id": "exportDefaultFunction",
      "parameters": Array [],
      "returnType": "void",
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ export-default-interface.ts 1`] = `
Object {
  "nodes": Array [
    InterfaceParseResult {
      "constructors": Array [],
      "defaultExported": true,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedInterfaces": Array [],
      "id": "ExportDefaultInterface",
      "methods": Array [],
      "properties": Array [],
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ export-function.ts 1`] = `
Object {
  "nodes": Array [
    FunctionParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "id": "exportFunction",
      "parameters": Array [],
      "returnType": "void",
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ export-interface.ts 1`] = `
Object {
  "nodes": Array [
    InterfaceParseResult {
      "constructors": Array [],
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "extendedInterfaces": Array [],
      "id": "ExportInterface",
      "methods": Array [],
      "properties": Array [],
    },
  ],
}
`;

exports[`/Users/umidbekkarimov/Documents/Projects/dcodeteam/ts2md/src/parser/parsers/__tests__ export-variable.ts 1`] = `
Object {
  "nodes": Array [
    VariableParseResult {
      "defaultExported": false,
      "documentation": "",
      "documentationTags": Array [],
      "exported": true,
      "id": "EXPORT_VARIABLE",
      "type": "string",
    },
  ],
}
`;
